--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -8,18 +8,18 @@
 </head>
 <body>
 
-    
+    <%- include('../partials/header.ejs') %>
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-9"></div>
+            <%- include('../partials/sidebar.ejs') %>
 
-            <%- include('../partials/header.ejs') %>
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+      <%- body %>
+    </main> 
+            
         </div>
     </div>
     
-    <%- include('../partials/sidebar.ejs')  %>
-
-    <%- body %> 
 </body>
 </html>
